# training-aerospike

./: .gitignore  build.gradle.kts  docker-compose.yml  settings.gradle.kts
kotlin/: build.gradle.kts
kotlin/run/secrets/: aerospike.conf  discovery.py
kotlin/src/main/kotlin/: BenchmarkEnv.kt  ReadBenchmark.kt  WriteBenchmark.kt
kotlin/src/test/kotlin/: DataTypeTest.kt  WriteTest.kt
python/: benchmark.py  benchmark.sh  delete-sets.py  hello-world.py  pyproject.toml  show-infos.py
src/main/kotlin/: Main.kt
src/main/python/: hello-world.py
src/test/kotlin/: ReadTest.kt
